# client_server_app

./: .gitignore  CMakeLists.txt  README.md  server.ilk
include/: auxiliary_functions.hpp  user_library.hpp
linux/: client  client.cpp  server  server.cpp
linux/test/: find_char_symbol.cpp  test_buffer_message  test_char_vectors.cpp
src_lin/: auxiliary_functions.cpp  client.cpp  server.cpp  user_library.cpp
src_win/: client.cpp  server.cpp
test/: find_char_symbol  parse_digits_from_char  parse_digits_from_char.cpp  switch_math_operation  switch_math_operation.cpp  test_buffer_message.cpp  test_char_vectors
tests/: CMakeLists.txt  test_user_library.cpp
windows/: client.ilk
